Added diffuse material

--- a/RayTracing/RayTracing.vcxproj
+++ b/RayTracing/RayTracing.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="raytracing.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="camera.h" />
     <ClInclude Include="color.h" />
     <ClInclude Include="primitive.h" />
     <ClInclude Include="primitive_list.h" />
