--- a/RayTracing/RayTracing.vcxproj
+++ b/RayTracing/RayTracing.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="camera.h" />
     <ClInclude Include="color.h" />
+    <ClInclude Include="material.h" />
     <ClInclude Include="primitive.h" />
     <ClInclude Include="primitive_list.h" />
     <ClInclude Include="Ray.h" />
